--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-<h1>Helo students and you should enjoy htis couse</h1>
+<h1>Helo coursea students! I am thrilled about this course</h1>
   </body>
 </html>
